--- a/config-sample.yaml
+++ b/config-sample.yaml
@@ -4,4 +4,4 @@ bot_name: "bot-name"
 bot_server: "irc.freenode.net"
 password: "you-password"
 app_password: "app-password"
-callback_url: "http://example.com"
+callback_url: "http://example.com:4567"
